kubernetes/frontend/service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: redis-example
  labels:
    app: frontend
spec:
  selector:
    app: frontend
  ports:
    - name: web
      port: 80
      targetPort: web
